@@ -485,7 +485,7 @@ same method of specifying the port is required there.
 For the USB programmer "AVR-Doper" running in HID mode, the port must
 be specified as
 .Ar avrdoper.
-Libusb support is required on Unix but not on Windows. For more
+Libhidapi support is required on Unix and Mac OS but not on Windows. For more
 information about AVR-Doper see http://www.obdev.at/avrusb/avrdoper.html.
 .Pp
 For the USBtinyISP, which is a simplicistic device not implementing
